2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* THANKS: add sponsor.

	* scm/define-markup-commands.scm (with-url): new markup command.

	* scm/page-layout.scm (TAGLINE): add www.lilypond.org with URL to
	tagline.
	
	* scm/output-tex.scm (url-link): stub.

	* scm/output-ps.scm (url-link): new function.

	* lily/lily-parser-scheme.cc (LY_DEFINE): deprecate
	ly:set-point-and-click

2005-02-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* ps/music-drawing-routines.ps (mark_file_line): Switch Action
	based on pdf-viewer setting.

	* scm/framework-ps.scm (write-preamble): Find and set preferred
	pdf-viewer.

2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/point-and-click.itely: update for PDF point &
	click.

	* scripts/lilypond-pdfpc-helper.py: new file. Invoke different
	editors based on EDITOR setting.

2005-02-27  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/*: Oops, more grand 2005 replace bits.

2005-02-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* ps/music-drawing-routines.ps: new routine: insert PDF mark

	* scm/output-ps.scm (grob-cause): point & click support for
	PostScript

2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/input-scheme.cc (LY_DEFINE): rename to
	ly:input-file-line-column

2005-02-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: small fix from Steve Doonan.

	* Documentation/user/scheme-tutorial.itely: small fix from Steve Doonan.

	* Documentation/user/notation.itely: revamped Polyphony section
	from Yuval Harel.  Thanks!

	* THANKS: added Yuval Harel.

	* Documentation/user/{various}: inserted two spaces after a period.

	* Documentation/user/lilypond.tely: added framework for reorg.

	* Documentation/user/basic-notation.itely, instrument-notation.itely,
	advanced-notation.itely, global.itely: new files, placeholder for
	future reorg.

2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/lilypond-book.itely (Music fragment options):
	doc fontload.
